syntax = "proto3";

package main;

option go_package = "./proto";

message MemberPriceList {
  int64    level_id = 1;//会员id
  int64  price = 2;//会员价格
  string    level_name = 3;//会员名称
}
message ProductAttributeValueList {
  int64    ProductAttributeId = 1;//商品满多少
  string  AttributeValues = 2;//商品满多少
}
message ProductFullReductionList {
  int64 full_price = 1; //商品满多少
  int64 reduce_price = 2; //商品减多少
}
message ProductLadderList {
  int32 count = 1; //满足的商品数量
  int64 discount = 2; //折扣
  int64 price = 3; //折后价格
}
message SkuStockList {
  int64 spu_id = 1; //商品SpuId
  string name = 2; //SKU名称
  string sku_code = 3; //SKU编码
  string main_pic = 4; //主图
  string album_pics = 5; //图片集
  float price = 6; //价格
  float promotion_price = 7; //单品促销价格
  string promotion_start_time = 8; //促销开始时间
  string promotion_end_time = 9; //促销结束时间
  int32 stock = 10; //库存
  int32 low_stock = 11; //预警库存
  string spec_data = 12; //规格数据
  float weight = 13; //重量(kg)
  int32 publish_status = 14; //上架状态：0-下架，1-上架
  int32 verify_status = 15; //审核状态：0-未审核，1-审核通过，2-审核不通过
  int32 sort = 16; //排序
}

// 添加商品SPU
message ProductSpuReq {
  int64 id = 1; //商品SpuId
  string name = 2; //商品名称
  string product_sn = 3; //商品货号
  int64 category_id = 4; //商品分类ID
  string category_ids = 5; //商品分类ID集合
  string category_name = 6; //商品分类名称
  int64 brand_id = 7; //品牌ID
  string brand_name = 8; //品牌名称
  string unit = 9; //单位
  float weight = 10; //重量(kg)
  string keywords = 11; //关键词
  string brief = 12; //简介
  string description = 13; //详细描述
  string album_pics = 14; //画册图片，最多8张，以逗号分割
  string main_pic = 15; //主图
  string price_range = 16; //价格区间
  int32 publish_status = 17; //上架状态：0-下架，1-上架
  int32 new_status = 18; //新品状态:0->不是新品；1->新品
  int32 recommend_status = 19; //推荐状态；0->不推荐；1->推荐
  int32 verify_status = 20; //审核状态：0->未审核；1->审核通过
  int32 preview_status = 21; //是否为预告商品：0->不是；1->是
  int32 sort = 22; //排序
  int32 new_status_sort = 23; //新品排序
  int32 recommend_status_sort = 24; //推荐排序
  int32 sales = 25; //销量
  int32 stock = 26; //库存
  int32 low_stock = 27; //预警库存
  int32 promotion_type = 28; //促销类型：0->没有促销使用原价;1->使用促销价；2->使用会员价；3->使用阶梯价格；4->使用满减价格；5->秒杀
  string detail_title = 29; //详情标题
  string detail_desc = 30; //详情描述
  string detail_html = 31; //产品详情网页内容
  string detail_mobile_html = 32; //移动端网页详情
  int64 create_by = 33; //创建人ID
  repeated MemberPriceList      MemberPriceList = 34; //会员价格
  repeated ProductAttributeValueList      ProductAttributeValueList = 35; //商品属性和值
  repeated ProductFullReductionList      ProductFullReductionList = 36; //满减价格
  repeated ProductLadderList      ProductLadderList = 37; //阶梯价格
  repeated SkuStockList      SkuStockList = 38; //商品sku库存
}

message ProductSpuResp {
  int64 spu_id = 1;
}

// 删除商品SPU
message DeleteProductSpuReq {
  repeated int64 ids = 1;
}

message DeleteProductSpuResp {
  string pong = 1;
}

// 更新商品SPU状态
message UpdateProductSpuStatusReq {
  repeated int64 ids = 1; //商品SpuId
  int32 status = 16; //状态
  string detail = 3;
  int64 update_by = 4; //审核人
  string review_man = 5; //更新人ID
}

message UpdateProductSpuStatusResp {
  string pong = 1;
}

// 查询商品SPU详情
message QueryProductSpuDetailReq {
  int64 id = 1;
}

message BrandData {
  int64 id = 1; //
  string name = 2; //品牌名称
  string logo = 3; //品牌logo
  string big_pic = 4; //专区大图
  string description = 5; //描述
  string first_letter = 6; //首字母
  int32 sort = 7; //排序
  int32 recommend_status = 8; //推荐状态
  int32 product_count = 9; //产品数量
  int32 product_comment_count = 10; //产品评论数量
  int32 is_enabled = 11; //是否启用
  int64 create_by = 12; //创建人ID
  string create_time = 13; //创建时间
  int64 update_by = 14; //更新人ID
  string update_time = 15; //更新时间

}
message ProductAttributeDataList {
  int64 id = 1; //主键id
  int64 group_id = 2; //属性分组ID
  string name = 3; //属性名称
  int32 input_type = 4; //输入类型：1-手动输入，2-单选，3-多选
  int32 value_type = 5; //值类型：1-文本，2-数字，3-日期
  string input_list = 6; //可选值列表，用逗号分隔
  string unit = 7; //单位
  int32 is_required = 8; //是否必填
  int32 is_searchable = 9; //是否支持搜索
  int32 is_show = 10; //是否显示
  int32 sort = 11; //排序
  int64 create_by = 12; //创建人ID
  string create_time = 13; //创建时间
  int64 update_by = 14; //更新人ID
  string update_time = 15; //更新时间

}
message ProductAttributeValueData {
  int64 id = 1; //主键id
  int64 spu_id = 2; //商品SPU ID
  int64 attribute_id = 3; //属性ID
  string value = 4; //属性值
  int64 create_by = 5; //创建人ID
  string create_time = 6; //创建时间
  int64 update_by = 7; //更新人ID
  string update_time = 8; //更新时间
}
message SkuStockData {
  int64 id = 1; //商品SpuId
  int64 spu_id = 2; //商品SpuId
  string name = 3; //SKU名称
  string sku_code = 4; //SKU编码
  string main_pic = 5; //主图
  string album_pics = 6; //图片集
  float price = 7; //价格
  float promotion_price = 8; //单品促销价格
  string promotion_start_time = 9; //促销开始时间
  string promotion_end_time = 10; //促销结束时间
  int32 stock = 11; //库存
  int32 low_stock = 12; //预警库存
  string spec_data = 13; //规格数据
  float weight = 14; //重量(kg)
  int32 publish_status = 15; //上架状态：0-下架，1-上架
  int32 verify_status = 16; //审核状态：0-未审核，1-审核通过，2-审核不通过
  int32 sort = 17; //排序
  int32 sales = 18; //销量
  int64 create_by = 19; //创建人ID
  string create_time = 20; //创建时间
  int64 update_by = 21; //更新人ID
  string update_time = 22; //更新时间


}
message ProductLadderData {
  int64 id = 1; //
  int64 product_id = 2; //商品id
  int32 count = 3; //满足的商品数量
  int64 discount = 4; //折扣
  int64 price = 5; //折后价格

}
message ProductFullReductionData {
  int64 id = 1; //
  int64 product_id = 2; //商品id
  int64 full_price = 3; //商品满多少
  int64 reduce_price = 4; //商品减多少

}
message MemberPriceListData {
  int64 id = 1; //
  int64 product_id = 2; //商品id
  int64 member_level_id = 3; //会员等级id
  int64 member_price = 4; //会员价格
  string member_level_name = 5; //会员等级名称

}

message QueryProductSpuDetailResp {
  ProductSpuListData data = 1; //商品
  BrandData       Brand = 2;
  repeated ProductAttributeDataList       ProductAttributeList = 3;
  repeated ProductAttributeValueData       ProductAttributeValueList = 4;
  repeated SkuStockData      SkuStockList = 5;
  repeated ProductLadderData      ProductLadderList = 6;
  repeated ProductFullReductionData      ProductFullReductionList = 7;
  repeated MemberPriceListData      MemberPriceList = 8;

}

// 分页查询商品SPU列表
message QueryProductSpuListReq {
  string name = 1; //商品名称
  int64 category_id = 2; //商品分类ID
  string category_ids = 3; //商品分类ID集合
  string category_name = 4; //商品分类名称
  int64 brand_id = 5; //品牌ID
  string brand_name = 6; //品牌名称
  int32 publish_status = 7; //上架状态：0-下架，1-上架
  int32 new_status = 8; //新品状态:0->不是新品；1->新品
  int32 recommend_status = 9; //推荐状态；0->不推荐；1->推荐
  int32 verify_status = 10; //审核状态：0->未审核；1->审核通过
  int32 preview_status = 11; //是否为预告商品：0->不是；1->是
  int32 promotion_type = 12; //促销类型：0->没有促销使用原价;1->使用促销价；2->使用会员价；3->使用阶梯价格；4->使用满减价格；5->秒杀
  int32 page_num = 13; //第几页
  int32 page_size = 14; //每页的数量
  string keywords = 15; //关键词
  string product_sn = 16; //商品货号
}

message ProductSpuListData {
  int64 id = 1; //商品SpuId
  string name = 2; //商品名称
  string product_sn = 3; //商品货号
  int64 category_id = 4; //商品分类ID
  string category_ids = 5; //商品分类ID集合
  string category_name = 6; //商品分类名称
  int64 brand_id = 7; //品牌ID
  string brand_name = 8; //品牌名称
  string unit = 9; //单位
  float weight = 10; //重量(kg)
  string keywords = 11; //关键词
  string brief = 12; //简介
  string description = 13; //详细描述
  string album_pics = 14; //画册图片，最多8张，以逗号分割
  string main_pic = 15; //主图
  string price_range = 16; //价格区间
  int32 publish_status = 17; //上架状态：0-下架，1-上架
  int32 new_status = 18; //新品状态:0->不是新品；1->新品
  int32 recommend_status = 19; //推荐状态；0->不推荐；1->推荐
  int32 verify_status = 20; //审核状态：0->未审核；1->审核通过
  int32 preview_status = 21; //是否为预告商品：0->不是；1->是
  int32 sort = 22; //排序
  int32 new_status_sort = 23; //新品排序
  int32 recommend_status_sort = 24; //推荐排序
  int32 sales = 25; //销量
  int32 stock = 26; //库存
  int32 low_stock = 27; //预警库存
  int32 promotion_type = 28; //促销类型：0->没有促销使用原价;1->使用促销价；2->使用会员价；3->使用阶梯价格；4->使用满减价格；5->秒杀
  string detail_title = 29; //详情标题
  string detail_desc = 30; //详情描述
  string detail_html = 31; //产品详情网页内容
  string detail_mobile_html = 32; //移动端网页详情
  int64 create_by = 33; //创建人ID
  string create_time = 34; //创建时间
  int64 update_by = 35; //更新人ID
  string update_time = 36; //更新时间

}

message QueryProductSpuListResp {
  int64 total = 1;
  repeated  ProductSpuListData list = 2;
}

message UpdateProductSortReq {
  int64 id = 1;
  int32 sort = 2;
  int64 update_by = 3; //更新人ID
}
message QueryProductSpuByIdsReq {
  repeated int64  Ids = 1;
}
// 商品SPU
service ProductSpuService {
  // 添加商品SPU
  rpc AddProductSpu(ProductSpuReq) returns (ProductSpuResp){}
  // 删除商品SPU
  rpc DeleteProductSpu(DeleteProductSpuReq) returns (DeleteProductSpuResp){}
  // 更新商品SPU
  rpc UpdateProductSpu(ProductSpuReq) returns (ProductSpuResp){}
  // 查询商品SPU详情
  rpc QueryProductSpuDetail(QueryProductSpuDetailReq) returns (QueryProductSpuDetailResp){}
  // 查询商品SPU列表
  rpc QueryProductSpuList(QueryProductSpuListReq) returns (QueryProductSpuListResp){}


  //修改审核状态
  rpc UpdateVerifyStatus(UpdateProductSpuStatusReq) returns(UpdateProductSpuStatusResp);
  //上下架商品
  rpc UpdatePublishStatus(UpdateProductSpuStatusReq) returns(UpdateProductSpuStatusResp);
  //推荐商品
  rpc UpdateRecommendStatus(UpdateProductSpuStatusReq) returns(UpdateProductSpuStatusResp);
  //设为新品
  rpc UpdateNewStatus(UpdateProductSpuStatusReq) returns(UpdateProductSpuStatusResp);
  //修改删除状态
  rpc UpdateDeleteStatus(UpdateProductSpuStatusReq) returns(UpdateProductSpuStatusResp);

  //更新新品排序
  rpc UpdateNewStatusSort(UpdateProductSortReq) returns(UpdateProductSpuStatusResp);
  //更新推荐排序
  rpc UpdateRecommendStatusSort(UpdateProductSortReq) returns(UpdateProductSpuStatusResp);

  //根据id集合查询商品信息
  rpc QueryProductSpuListByIds(QueryProductSpuByIdsReq) returns(QueryProductSpuListResp);
}
